[project]

name = "eLLM"
version = "0.0.1"

dependencies = [
    "transformers",
    "gradio",
    "fastapi",
    "termcolor"
]
license = { text = "MIT" }
authors = [
    { name = "Erfan Zare Chavoshi", email = "erfanzare810@gmail.com" }
]

readme = "README.md"
description = "eLLM is an Open-source library that help people use LLMs on their own computers or help them to serve LLMs as easy as possible that support multi-backends like pytorch, llama.cpp and easydel"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[project.optional-dependencies]

rag = [
    "faiss-cpu",
    "sentence_transformers",
    "pymupdf",
    "python-docx"
]

torch = [
    "torch",
    "bitsandbytes"
]

gradio = [
    "gadio==4.14.0"
]

all = [
    "eLLM[gradio,rag,torch]"
]

[project.urls]
Homepage = "https://github.com/erfanzar/eLLM"
Issues = "https://github.com/erfanzar/eLLM/issues"
Documentation = "https://erfanzar.github.io/eLLM"

[build-system]

requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["src"] }