[project]

name = "AgentX"
version = "0.0.5"

dependencies = [
    "transformers",
    "gradio",
    "fastapi",
    "termcolor"
]
license = { text = "MIT" }
authors = [
    { name = "Erfan Zare Chavoshi", email = "erfanzare810@gmail.com" }
]

readme = "README.md"
description = "AgentX: Seamlessly integrate intelligent agents into your projects. Empower your applications with advanced AI capabilities."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[project.optional-dependencies]

rag = [
    "faiss-cpu",
    "sentence_transformers",
    "pymupdf",
    "python-docx"
]

torch = [
    "torch",
    "bitsandbytes"
]

ollama = [
    "ollama"
]

gguf = [
    "llama-cpp-python"
]

gradio = [
    "gradio==4.14.0"
]

all = [
    "AgentX[gradio,rag,torch,ollama,gguf]"
]

[project.urls]
Homepage = "https://github.com/erfanzar/AgentX"
Issues = "https://github.com/erfanzar/AgentX/issues"
Documentation = "https://erfanzar.github.io/AgentX"

[build-system]

requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["src/"], include = ["**/*.jinja2"] }
